typescript/checker/tests/conformance/es6/templates/templateStringUnterminated2.ts.stderr
error: Unterminated template
 --> $DIR/tests/conformance/es6/templates/templateStringUnterminated2.ts:2:1
  |
2 | `\`
  | ^^^

